--- a/docs/locale/es/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/es/LC_MESSAGES/schema/concepts.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-13 16:06+0100\n"
+"POT-Creation-Date: 2022-06-16 12:10+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
 "Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
@@ -235,13 +235,11 @@ msgstr ":any:`Declaración sobre persona <schema-person-statement>`"
 
 #: ../../schema/concepts.rst:64 d682b56130ce4aa5bde5cc68397ba66c
 msgid ""
-"Each statement has a ``statementIdentifier`` and ``statementType`` field. "
-"The ``statementIdentifier`` exists solely for the purpose of connecting "
-"statements."
+"Each statement has a ``statementID`` and ``statementType`` field. The "
+"``statementID`` exists solely for the purpose of connecting statements."
 msgstr ""
-"Cada declaración posee los campos ``statementIdentifier``` y "
-"``statementType``. ``statementIdentifier`` existe solamente para conectar "
-"las declaraciones."
+"Cada declaración posee los campos ``statementID``` y ``statementType``. "
+"``statementID`` existe solamente para conectar las declaraciones."
 
 #: ../../schema/concepts.rst:66 e386741f131f4558be67112d22495348
 msgid ""
@@ -269,12 +267,12 @@ msgstr ""
 msgid ""
 "**Ownership-or-control statements** describe the interest(s) held by one "
 "entity in another, or a person in an entity. They are connected to those "
-"entities and persons using ``statementIdentifier`` references."
+"entities and persons using ``statementID`` references."
 msgstr ""
 "Las **declaraciones sobre titularidad o control** describen lo(s) "
 "interés(es) que una entidad posee en otra, o que una persona posee en una "
 "entidad. Se vinculan a esas entidades y personas mediante referencias de "
-"``IdentificaciónDeclaración``."
+"``StatementID``."
 
 #: ../../schema/concepts.rst:70 61b631febeaa466b938ad2dfedb47db4
 msgid ""
@@ -349,15 +347,15 @@ msgstr ""
 
 #: ../../schema/concepts.rst:83 230e8ae199234be48c42b90f7abf188b
 msgid ""
-"An ``ownershipOrControlStatement`` connects (via ``statementIdentifier`` "
-"references) the ``subject`` of the statement (an entity described by an "
+"An ``ownershipOrControlStatement`` connects (via ``statementID`` references)"
+" the ``subject`` of the statement (an entity described by an "
 "``entityStatement``) and an ``interestedParty``. This interested party may "
 "be:"
 msgstr ""
 "Una ``ownershipOrControlStatement`` vincula (mediante referencias de "
-"``statementIdentifier``) al ``subject`` de la declaración (la entidad "
-"descripta en la ``entityStatement``) y a una ``interestedParty``. Esta parte"
-" interesada puede ser:"
+"``statementID``) al ``subject`` de la declaración (la entidad descripta en "
+"la ``entityStatement``) y a una ``interestedParty``. Esta parte interesada "
+"puede ser:"
 
 #: ../../schema/concepts.rst:85 e3e61851d0c04f65b608192b60d0f86c
 msgid "Another entity described by an ``entityStatement``;"
