--- a/docs/locale/ru/LC_MESSAGES/schema/concepts.po
+++ b/docs/locale/ru/LC_MESSAGES/schema/concepts.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Beneficial Ownership Data Standard 0.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-04-13 16:06+0100\n"
+"POT-Creation-Date: 2022-06-16 12:10+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
 "Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Russian (https://www.transifex.com/OpenDataServices/teams/95583/ru/)\n"
@@ -230,12 +230,11 @@ msgstr ":any:`Запись о физическом лице <schema-person-state
 
 #: ../../schema/concepts.rst:64 d682b56130ce4aa5bde5cc68397ba66c
 msgid ""
-"Each statement has a ``statementIdentifier`` and ``statementType`` field. "
-"The ``statementIdentifier`` exists solely for the purpose of connecting "
-"statements."
+"Each statement has a ``statementID`` and ``statementType`` field. The "
+"``statementID`` exists solely for the purpose of connecting statements."
 msgstr ""
-"Каждая запись имеет поле ``statementIdentifier`` и ``statementType``. "
-"``statementIdentifier`` существует исключительно в целях соединения записей."
+"Каждая запись имеет поле ``statementID`` и ``statementType``. "
+"``statementID`` существует исключительно в целях соединения записей."
 
 #: ../../schema/concepts.rst:66 e386741f131f4558be67112d22495348
 msgid ""
@@ -262,12 +261,12 @@ msgstr ""
 msgid ""
 "**Ownership-or-control statements** describe the interest(s) held by one "
 "entity in another, or a person in an entity. They are connected to those "
-"entities and persons using ``statementIdentifier`` references."
+"entities and persons using ``statementID`` references."
 msgstr ""
 "**Записи о владении или контроле** описывают долевое участие, имеющееся у "
 "субъекта в другом субъекте или у физического лица в субъекте. Они связаны с "
 "соответствующими субъектами и физическими лицами при помощи ссылок "
-"``statementIdentifier``."
+"``statementID``."
 
 #: ../../schema/concepts.rst:70 61b631febeaa466b938ad2dfedb47db4
 msgid ""
@@ -344,16 +343,16 @@ msgstr ""
 
 #: ../../schema/concepts.rst:83 230e8ae199234be48c42b90f7abf188b
 msgid ""
-"An ``ownershipOrControlStatement`` connects (via ``statementIdentifier`` "
-"references) the ``subject`` of the statement (an entity described by an "
+"An ``ownershipOrControlStatement`` connects (via ``statementID`` references)"
+" the ``subject`` of the statement (an entity described by an "
 "``entityStatement``) and an ``interestedParty``. This interested party may "
 "be:"
 msgstr ""
 "Запись о владении или контроле (``ownershipOrControlStatement``) соединяет "
-"(посредством ссылок на идентификатор записи (``statementIdentifier``)) "
-"предмет (``subject``) записи (субъект, описанный при помощи записи о "
-"субъекте (``entityStatement``)) и заинтересованную сторону "
-"(``interestedParty``). Этой заинтересованной стороной может быть:"
+"(посредством ссылок на идентификатор записи (``statementID``)) предмет "
+"(``subject``) записи (субъект, описанный при помощи записи о субъекте "
+"(``entityStatement``)) и заинтересованную сторону (``interestedParty``). "
+"Этой заинтересованной стороной может быть:"
 
 #: ../../schema/concepts.rst:85 e3e61851d0c04f65b608192b60d0f86c
 msgid "Another entity described by an ``entityStatement``;"
