--- a/docs/locale/es/LC_MESSAGES/primer/index.po
+++ b/docs/locale/es/LC_MESSAGES/primer/index.po
@@ -6,6 +6,7 @@
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
 # Agustina De Luca, 2022
+# Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-04-13 16:06+0100\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Agustina De Luca, 2022\n"
+"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
 "Language-Team: Spanish (https://www.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,8 +33,8 @@ msgid ""
 "basics of a data standard handling Beneficial Ownership."
 msgstr ""
 "Esta guía introductoria tiene como objetivo explicar los fundamentos básicos"
-" del concepto de beneficiarios finales y de un estándar de datos que se "
-"ocupa de los beneficiarios finales."
+" del concepto de beneficiarios finales y de un estándar de datos que trata "
+"sobre ellos"
 
 #: ../../primer/index.rst:6 2a217fdd476c4222926a0d3780680c6e
 msgid ""
