--- a/docs/locale/ru/LC_MESSAGES/about/credits.po
+++ b/docs/locale/ru/LC_MESSAGES/about/credits.po
@@ -6,6 +6,7 @@
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
+# Kateryna Volobuieva, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022\n"
+"Last-Translator: Kateryna Volobuieva, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,6 +36,12 @@ msgid ""
 "(`Open Data Services <https://www.opendataservices.coop>`_) and input from "
 "the :doc:`data standard working group <governance>`."
 msgstr ""
+"Бета-версию Стандарта данных о бенефициарном владении написал Тим Дейвис "
+"(`Open Data Services <http://www.opendataservices.coop>`__) с Беном "
+"Саймондсом (`OpenCorporates <http://www.opencorporates.com>`__), Крисом "
+"Таггартом (`OpenCorporates <http://www.opencorporates.com>`__) и Джеком "
+"Лордом (`Open Data Services <http://www.opendataservices.coop>`__) при "
+"поддержке :doc:`рабочей группы по разработке стандарта данных <governance>`."
 
 #: ../../about/credits.rst:11 5851332e903f448ea4f2860614ef0b74
 msgid ""
@@ -87,3 +94,8 @@ msgid ""
 " Ed Lloyd-Davies (`Open Data Services <https://www.opendataservices.coop>`_)"
 " and input from the data standard working group."
 msgstr ""
+"Версию 0.4 написали Кади Армстронг, Эмма Говард, Кэтрин Айриш, Рэйчел Винт и"
+" Льюис Спургин (`Open Data Services <https://www.opendataservices.coop>`__),"
+" техническую работу выполнили Ами Гай и Эд Ллойд-Дейвис (`Open Data Services"
+" <https://www.opendataservices.coop>`__), также было получено содействие "
+"рабочей группы по стандарту данных."
