--- a/docs/locale/ru/LC_MESSAGES/about/governance.po
+++ b/docs/locale/ru/LC_MESSAGES/about/governance.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Galia Williams, 2022
+# Kateryna Volobuieva, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Galia Williams, 2022\n"
+"Last-Translator: Kateryna Volobuieva, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #: ../../about/governance.rst:2 a09896bb0778440fb77342b6454fae16
 msgid "Governance and development"
-msgstr ""
+msgstr "Управление и разработка"
 
 #: ../../about/governance.rst:4 b340f18ee2ac4f09819c0e6bd7a94f1a
 msgid ""
@@ -32,12 +33,18 @@ msgid ""
 "focused on beneficial ownership transparency, in partnership with `Open Data"
 " Services <https://opendataservices.coop/>`_."
 msgstr ""
+"Стандарт данных о бенефициарном владении (СДБВ) разработан `Open Ownership "
+"<https://www.openownership.org/>`_ — некоммерческой организацией, "
+"занимающейся проблемами прозрачности бенефициарного владения, в партнерстве "
+"с `Open Data Services <https://opendataservices.coop/>`_."
 
 #: ../../about/governance.rst:6 979298d168ea43c484409e58475e6c50
 msgid ""
 "Development of BODS responds to the evolving needs of those collecting, "
 "sharing and using beneficial ownership data."
 msgstr ""
+"Разработка СДБВ отвечает расширяющимся потребностям тех, кто занимается "
+"сбором, предоставлением и использованием данных о бенефициарном владении."
 
 #: ../../about/governance.rst:8 34142492ba924560b029eb0470a43cb3
 msgid ""
@@ -45,16 +52,23 @@ msgid ""
 "governed and developed will be updated by Open Ownership and Open Data "
 "Services in consultation with the Data Standard Working Group."
 msgstr ""
+"По мере продолжения работы над версией 1.0 процессы, в соответствии с "
+"которыми осуществляется управление СДБВ и его разработка, будут обновляться "
+"организациями Open Ownership и Open Data Services по согласованию с Рабочей "
+"группой по разработке стандарта данных."
 
 #: ../../about/governance.rst:10 6a1cb71b6a2543a0a283d7d1c1c2d4f5
 msgid ""
 "Full details about these processes will be kept up-to-date in the `BODS "
 "development handbook <https://openownership.github.io/bods-dev-handbook/>`_."
 msgstr ""
+"Полная информация об этих процессах будет постоянно обновляться в "
+"`Руководстве по разработке СДБВ <https://openownership.github.io/bods-dev-"
+"handbook/>`_."
 
 #: ../../about/governance.rst:14 f33bb88d817144f18411f0dbdb82944f
 msgid "Feature requests and bug reports"
-msgstr ""
+msgstr "Запросы на добавление функций и отчеты об ошибках"
 
 #: ../../about/governance.rst:16 250ac98febb44225bacc3ce08127e885
 msgid ""
@@ -63,16 +77,24 @@ msgid ""
 "standard/issues/new/choose>`_ available in the `BODS GitHub repository "
 "<https://github.com/openownership/data-standard/>`_."
 msgstr ""
+"Чтобы предложить внесение изменений или исправлений, необходимо подать "
+"запрос на добавление функции СДБВ или отчет об ошибке, воспользовавшись "
+"`шаблонами проблем <https://github.com/openownership/data-"
+"standard/issues/new/choose>`_, доступными в `репозитории GitHub для СДБВ "
+"<https://github.com/openownership/data-standard/>`_."
 
 #: ../../about/governance.rst:18 15fad8b94f66450c86853df00a364357
 msgid ""
 "Open Ownership and Open Data Services will respond to all community feature "
 "requests or bug reports via comments on the Github issue."
 msgstr ""
+"Open Ownership и Open Data Services ответят на все поданные участниками "
+"запросы на добавление функций или отчеты об ошибках посредством комментариев"
+" к проблеме на Github."
 
 #: ../../about/governance.rst:21 353be43ce2374a69a563956467d062fd
 msgid "Feature development"
-msgstr ""
+msgstr "Разработка функций"
 
 #: ../../about/governance.rst:23 bb5129b364f548fc816db0ada51b9109
 msgid ""
@@ -80,6 +102,9 @@ msgid ""
 "submitted feature, Open Ownership and Open Data Services use feature "
 "development tickets."
 msgstr ""
+"Чтобы описать предлагаемую для разработки функцию или расширить описание "
+"функции, предложенной другими участниками, Open Ownership и Open Data "
+"Services предлагают использовать заявки на разработку функций."
 
 #: ../../about/governance.rst:25 e5d7051800194b25bb589ec790a3e787
 msgid ""
@@ -90,6 +115,14 @@ msgid ""
 "will first be added to the backlog. Once a ticket is actively being "
 "researched or worked on, it will be moved to the Research stage."
 msgstr ""
+"Заявки на разработку функций — это сформулированные проблемы: они нацелены "
+"на пробелы в системе данных СДБВ, касающиеся потребностей пользователей, "
+"которые потенциально необходимо устранить. Перечень текущих открытых заявок "
+"на разработку функций приводится в `трекере функций СДБВ "
+"<https://github.com/openownership/data-standard/projects/4>`_, а новые "
+"заявки сначала вносятся в журнал невыполненных заявок. Как только начинается"
+" активное изучение заявки или работа над ней, такая заявка переводится на "
+"этап изучения."
 
 #: ../../about/governance.rst:27 3f5104561b9c4f6db80bac4086181af5
 msgid ""
@@ -100,16 +133,25 @@ msgid ""
 "<https://github.com/openownership/data-"
 "standard/discussions/categories/feature-implementation>`_."
 msgstr ""
+"После того, как потребности пользователя в новой функции СДБВ описаны в "
+"заявке на разработку функции, могут вноситься предложения о том, как "
+"реализовать эту функцию. В настоящее время Open Ownership и Open Data "
+"Services используют форум GitHub Discussions, чтобы получать отзывы о "
+"`предложениях по реализации <https://github.com/openownership/data-"
+"standard/discussions/categories/feature-implementation>`_."
 
 #: ../../about/governance.rst:29 19c6ba29bd12416b8c9e5fbe2b8c1af8
 msgid ""
 "If broad consensus about whether or not to proceed with implementation as "
 "laid out in the proposal can't be reached, the decision should be postponed."
 msgstr ""
+"Если не удастся достичь широкого консенсуса по поводу того, следует ли "
+"приступать к реализации в соответствии с предложением, принятие решения "
+"необходимо отложить."
 
 #: ../../about/governance.rst:32 6e9323319e2f416d8cc5025fdb315a3f
 msgid "Release tracking"
-msgstr ""
+msgstr "Отслеживание публикации"
 
 #: ../../about/governance.rst:34 851f4fe161d64cbe8792e61262381b6d
 msgid ""
@@ -121,10 +163,17 @@ msgid ""
 "`release tracker for BODS version 0.4 "
 "<https://github.com/orgs/openownership/projects/4/views/1>`_."
 msgstr ""
+"Для каждой новой версии СДБВ организации Open Ownership и Open Data Services"
+" создают трекер публикаций как `проект "
+"<https://github.com/orgs/openownership/projects>`_ `GitHub-команды Open "
+"Ownership <https://github.com/openownership>`_, чтобы фиксировать функции, "
+"исправления ошибок, изменения и обновления, которые вносятся в новую версию."
+" `Трекер публикаций для версии 0.4 СДБВ находится по ссылке "
+"<https://github.com/orgs/openownership/projects/4/views/1>`_."
 
 #: ../../about/governance.rst:39 c799e349b61c41db96eb7ed1d3bec34c
 msgid "Data Standard Working Group"
-msgstr ""
+msgstr "Рабочая группа по разработке стандарта данных"
 
 #: ../../about/governance.rst:41 e013aedf3ecb442f82a8d2cd78550802
 msgid ""
@@ -132,6 +181,9 @@ msgid ""
 "data experts to help shape the development of BODS as well as driving "
 "adoption of the standard internationally."
 msgstr ""
+"Рабочая группа по разработке стандарта данных объединяет местных технических"
+" экспертов и экспертов по данным для помощи в разработке СДБВ , а также для "
+"содействия принятию стандарта на международном уровне."
 
 #: ../../about/governance.rst:43 13212a0f468a4680950434d8b55d92a9
 msgid ""
@@ -157,3 +209,13 @@ msgid ""
 "encouraged to respond to issues via `GitHub "
 "<https://github.com/openownership/data-standard/issues>`_ or email."
 msgstr ""
+"Участие в рабочей группе является добровольным. Любой желающий может подать "
+"заявку на вступление в группу, `заполнив эту форму "
+"<https://docs.google.com/forms/d/e/1FAIpQLSdRSmSUxyyv2t1k3vWXZ_3EhTW_f603MeGxgyjKnbNNE9vvbQ/viewform>`_"
+" после ознакомления с `техническим заданием "
+"<https://docs.google.com/document/d/1kNxojFM0BLZvUYlFWfayQ88CG7ffC-"
+"ypjMtrZxDDKmU/edit?usp=sharing>`_. Виртуальные встречи группы проводятся "
+"ежеквартально, а коммуникация координируется через группу Google. Участникам"
+" рекомендуется давать ответы по проблемам через `GitHub "
+"<https://github.com/openownership/data-standard/issues>`_ или по электронной"
+" почте."
