--- a/docs/locale/ru/LC_MESSAGES/standard/concepts.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/concepts.po
@@ -6,6 +6,7 @@
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Kateryna Volobuieva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Kateryna Volobuieva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,8 +274,7 @@ msgstr "публикация обновленной информации."
 
 #: ../../standard/concepts.rst:67 91b9d18c05824cc9bb0fc24204bd4d72
 msgid "See :any:`record-identifiers` for full requirements."
-msgstr ""
-"См. полный перечень требований в разделе :any:`Идентификаторы элементов`."
+msgstr "См. полный перечень требований в разделе :any:`record-identifiers`."
 
 #: ../../standard/concepts.rst:70 0c776de779fe4eebbeaebd0b5af2ba72
 msgid "Linking entities and persons via relationships"
@@ -386,8 +386,7 @@ msgstr ""
 
 #: ../../standard/concepts.rst:95 00af9162c4b24cfca998e0bc3afc0085
 msgid "See :ref:`information-updates` for full requirements."
-msgstr ""
-"См. полный перечень требований в разделе :ref:`Обновленная информация`."
+msgstr "См. полный перечень требований в разделе :ref:`information-updates`."
 
 #: ../../standard/concepts.rst:98 a77d3880c78c45b3b29f721d3e19ee06
 msgid "Representing beneficial owners"
@@ -428,9 +427,7 @@ msgstr ""
 
 #: ../../standard/concepts.rst:106 5e3909bc0bd44d098a2c128ec05c53f0
 msgid "See :ref:`representing-bo` for full requirements."
-msgstr ""
-"См. полный перечень требований в разделе :ref:`Отображение бенефициарных "
-"владельцев`."
+msgstr "См. полный перечень требований в разделе :ref:`representing-bo`."
 
 #: ../../standard/concepts.rst:109 970f440b2038460e9dfc1a551d22488c
 msgid "The data model"
@@ -455,4 +452,4 @@ msgid ""
 msgstr ""
 "Объекты и поля модели данных позволяют отображать различные реальные "
 "ситуации. Ознакомьтесь с соответствующими требованиями в разделе "
-":any:`Требования к моделированию`."
+":any:`modelling-requirements`."
