--- a/docs/locale/ru/LC_MESSAGES/standard/modelling/dates-guidance.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/modelling/dates-guidance.po
@@ -38,6 +38,8 @@ msgid ""
 "In BODS, dates represent real world events and information about how data "
 "has moved through a system."
 msgstr ""
+"В системе данных СДБВ даты отображают реальные события и информацию о "
+"перемещении данных в системе."
 
 #: ../../standard/modelling/dates-guidance.rst:11
 #: 4ea8bcb790b341d284292335378da80b
@@ -50,6 +52,13 @@ msgid ""
 "resolved to make a coherent claim about the state of an entity, person, or "
 "relationship."
 msgstr ""
+"Значение свойства ``statementDate`` — это дата, когда информация о субъекте,"
+" физическом лице или отношениях заявлена как правдивая. Это значение может "
+"фиксироваться автоматически, когда подается онлайн-форма декларации, или "
+"быть датой подачи, указанной на физической форме. В случае объединения "
+"данных о бенефициарном владении это будет дата, когда было использовано "
+"несколько источников информации для создания единого заявления о состоянии "
+"субъекта, физического лица или отношений."
 
 #: ../../standard/modelling/dates-guidance.rst:13
 #: 3c30d6932609432cafa0acea9dc9d92a
@@ -60,6 +69,12 @@ msgid ""
 "``statementDate`` value if data is published immediately after submission. "
 "In many cases there will be a delay between submission and publication."
 msgstr ""
+"Значение свойства ``publicationDetails.publicationDate`` — это дата, когда "
+"была опубликована данная запись. Например, дата внесения информации в "
+"публичный реестр или обеспечения доступа к ней через API. Это значение может"
+" быть таким же, что и значение свойства ``statementDate``, если данные "
+"опубликованы сразу же после подачи. Во многих случаях между подачей и "
+"публикацией информации возникает задержка."
 
 #: ../../standard/modelling/dates-guidance.rst:15
 #: a801807a23ac4f67a87ba21b9ca21edc
@@ -68,6 +83,9 @@ msgid ""
 "date that shares were purchased or someone was appointed to the board of "
 "directors."
 msgstr ""
+"Значение свойства ``interest.startDate`` — это дата возникновения доли "
+"участия. Например дата приобретения акций или назначения в состав совета "
+"директоров."
 
 #: ../../standard/modelling/dates-guidance.rst:17
 #: 52272444902f437193b0ff43adfc213b
@@ -76,6 +94,9 @@ msgid ""
 "that shares were divested of or that someone resigned from the board of "
 "directors."
 msgstr ""
+"Значение свойства ``interest.endDate`` — это дата прекращения существования "
+"доли участия. Например дата продажи акций или выхода из состава совета "
+"директоров."
 
 #: ../../standard/modelling/dates-guidance.rst:19
 #: 0d1ea463b096478985863944ac5e01f7
@@ -86,11 +107,16 @@ msgid ""
 "is done, they must provide information on when they downloaded the data from"
 " the government registry."
 msgstr ""
+"Свойство ``source.retrievedAt`` применяется только в случае повторной "
+"публикации данных. Например некоторые третьи лица могут скачать данные из "
+"государственных реестров, преобразовать их в формат СДБВ и куда-либо "
+"передать. Когда это произойдет, они должны предоставить информацию о том, "
+"когда они загрузили данные из государственного реестра."
 
 #: ../../standard/modelling/dates-guidance.rst:22
 #: 7e0600371f7f43cb9b8c7c693be6339e
 msgid "Date rounding"
-msgstr ""
+msgstr "Округление даты"
 
 #: ../../standard/modelling/dates-guidance.rst:24
 #: 2424a5463fde456da994ffb093f2b7f0
@@ -99,6 +125,9 @@ msgid ""
 "may be published. This is indicated in the schema description for those "
 "fields."
 msgstr ""
+"В некоторых полях могут публиковаться округленные даты, если требуется "
+"указать точную дату, но она неизвестна. Это указано в описании таких полей в"
+" схеме."
 
 #: ../../standard/modelling/dates-guidance.rst:26
 #: 216cabd460844bf9b2466b0c603ea3fc
@@ -107,6 +136,8 @@ msgid ""
 "used. Where a year is known but not the month, the first day of the year can"
 " be used."
 msgstr ""
+"Если месяц известен, а день — нет, можно указать первый день такого месяца. "
+"Если год известен, а месяц — нет, можно указать первый день такого года."
 
 #: ../../standard/modelling/dates-guidance.rst:28
 #: f177b1e840294fff801504bdf91dc97a
@@ -115,11 +146,14 @@ msgid ""
 "data, to prevent misunderstanding. Publishers SHOULD create accompanying "
 "guidance for data users."
 msgstr ""
+"Если указываются округленные даты, об этом следует сообщить пользователям "
+"данных во избежание недопонимания. Издателям РЕКОМЕНДУЕТСЯ составить "
+"сопроводительное руководство для пользователей данных."
 
 #: ../../standard/modelling/dates-guidance.rst:30
 #: 590bd419c88640da946997eac03777f5
 msgid "For example:"
-msgstr ""
+msgstr "Например:"
 
 #: ../../standard/modelling/dates-guidance.rst:32
 #: 7e41bd5a99ac4a95bd9a0b7264586b91
@@ -127,6 +161,8 @@ msgid ""
 "If an interest started in March 2022 but the day is not known the interest's"
 " ``startDate`` would be published as 2022-03-01"
 msgstr ""
+"Если доля участия возникла в марте 2022 года, а день неизвестен, для "
+"свойства ``startDate`` будет указано значение 2022-03-01."
 
 #: ../../standard/modelling/dates-guidance.rst:33
 #: 75a8fa5a01764d9fac0937ae48b38e0f
@@ -134,6 +170,8 @@ msgid ""
 "If an interest started in 2022 but the month is not known the interest's "
 "``startDate`` would be published as 2022-01-01"
 msgstr ""
+"Если доля участия возникла в 2022 году, а месяц неизвестен, для свойства "
+"``startDate`` будет указано значение 2022-01-01."
 
 #: ../../standard/modelling/dates-guidance.rst:36
 #: eee211860b734644928da833c1653d45
@@ -143,7 +181,7 @@ msgstr "Примеры"
 #: ../../standard/modelling/dates-guidance.rst:39
 #: bc44d6a6318b4d319f44eef6f78ab2ef
 msgid "An interest ending"
-msgstr ""
+msgstr "Прекращение существования доли участия"
 
 #: ../../standard/modelling/dates-guidance.rst:40
 #: 706aaaa9ffdc4e1684a19b1521dbcaba
@@ -151,6 +189,8 @@ msgid ""
 "This statement represents someone divesting from shares. We can use the "
 "statement to construct a timeline of events."
 msgstr ""
+"Данная запись отображает продажу акций. Запись можно использовать для "
+"построения временной шкалы событий."
 
 #: ../../standard/modelling/dates-guidance.rst-1
 #: c26fd2565da9460ea915a71a6786cbf9
@@ -160,11 +200,15 @@ msgid ""
 " events - the relationship ending, the change being reported and the change "
 "being published."
 msgstr ""
+"Запись, в которой дата записи имеет значение 2019-09-10, дата публикации — "
+"2021-09-13, а дата прекращения существования доли участия — 2021-09-3. Рядом"
+" с записью изображена временная шкала, на которой обозначены такие события: "
+"прекращение отношений, сообщение об изменении и публикация изменения."
 
 #: ../../standard/modelling/dates-guidance.rst:49
 #: 8938de462e294b84928a43c6b3b21918
 msgid "A confirmation process"
-msgstr ""
+msgstr "Процесс подтверждения"
 
 #: ../../standard/modelling/dates-guidance.rst:51
 #: ae61d895cb3b4295ade886bdec3d9671
@@ -174,6 +218,10 @@ msgid ""
 " a new Relationship statement is generated with an updated ``statementDate``"
 " and ``publicationDate``."
 msgstr ""
+"Компанию учреждают, регистрируют и раскрывают данные о ее бенефициарных "
+"владельцах. Спустя год не происходит никаких изменений. Подается декларация "
+"о подтверждении, и создается новая Запись об отношениях с обновленными "
+"значениями свойств ``statementDate`` и ``publicationDate``."
 
 #: ../../standard/modelling/dates-guidance.rst-1
 #: fdb89245f84541f8ab4f95e617a827ea
@@ -181,11 +229,14 @@ msgid ""
 "2 statements showing the same interest start date and entity founding date. "
 "The statement date and publication date are one year apart."
 msgstr ""
+"Две записи, в которых указаны одинаковые даты возникновения доли участия и "
+"учреждения субъекта. Промежуток между датой записи и датой публикации "
+"составляет один год."
 
 #: ../../standard/modelling/dates-guidance.rst:59
 #: 9aa369428f984bb9b2b5b1adecddb799
 msgid "An error correction"
-msgstr ""
+msgstr "Исправление ошибки"
 
 #: ../../standard/modelling/dates-guidance.rst:61
 #: a66e06b113c84da2a9f253379e31b947
@@ -194,11 +245,14 @@ msgid ""
 "published with an incorrect ``interests[0].startDate``. To correct this, a "
 "new statement is published replacing the incorrect one."
 msgstr ""
+"Из-за ошибки в системе опубликования запись об отношениях опубликована с "
+"неверным значением свойства``interests[0].startDate``. Чтобы его исправить, "
+"публикуется новая запись для замены неверной."
 
 #: ../../standard/modelling/dates-guidance.rst:63
 #: 74976cac7ddb411b8789e4343ce789ec
 msgid "The new statement:"
-msgstr ""
+msgstr "Новая запись содержит:"
 
 #: ../../standard/modelling/dates-guidance.rst:65
 #: fb70c5f391fa4d0b8fbb697e50745633
@@ -206,21 +260,24 @@ msgid ""
 "has the same ``statementDate``, because the date of the original information"
 " submission has not changed"
 msgstr ""
+"то же самое значение свойства ``statementDate``, поскольку дата подачи "
+"исходной информации не изменилась;"
 
 #: ../../standard/modelling/dates-guidance.rst:66
 #: fa9c3d173dc04f3eb9afe88e5ff08883
 msgid "has a new ``publicationDate``"
-msgstr ""
+msgstr "новое значение свойства ``publicationDate``;"
 
 #: ../../standard/modelling/dates-guidance.rst:67
 #: 7cb9d423b0af4fbbb583916b651dffe1
 msgid "has a corrected ``interest.startDate``"
-msgstr ""
+msgstr "исправленное значение свойства ``interest.startDate``;"
 
 #: ../../standard/modelling/dates-guidance.rst:68
 #: 4868b3b6dab2415eba83abf150ca08a2
 msgid "has an :ref:`Annotation <schema-annotation>` explaining the correction"
 msgstr ""
+":ref:`Примечание <schema-annotation>`, в котором поясняется исправление."
 
 #: ../../standard/modelling/dates-guidance.rst-1
 #: 24b4163a805e490bb8c1cf44c4302093
@@ -230,3 +287,8 @@ msgid ""
 "date. The second statement has an annotation with motivation \"correction\" "
 "point towards the interest start date."
 msgstr ""
+"Две записи, которые содержат одинаковые значения свойств recordId и "
+"statementDate. Во второй записи указаны другие значения для даты публикации,"
+" идентификатора записи и даты возникновения доли участия. Вторая запись "
+"содержит примечание, указывающее для мотивации значение \"correction\" в "
+"отношении даты возникновения доли участия."
