--- a/docs/locale/ru/LC_MESSAGES/standard/modelling/identifiers.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/modelling/identifiers.po
@@ -7,6 +7,7 @@
 # Galia Williams, 2024
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Kateryna Volobuieva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Kateryna Volobuieva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -78,9 +79,10 @@ msgid ""
 " an Entity Statement to supply a company registration number, Legal Entity "
 "Identifier (LEI), or other real world identifier."
 msgstr ""
-"Используйте :ref:`Идентификатор` в массиве``identifiers`` Записи о субъекте,"
-" чтобы указать регистрационный номер компании, идентификатор юридического "
-"лица (Legal Entity Identifier, LEI) или другой общий идентификатор."
+"Используйте :ref:`Идентификатор <schema-identifier>` в массиве "
+"``identifiers`` Записи о субъекте, чтобы указать регистрационный номер "
+"компании, идентификатор юридического лица (Legal Entity Identifier, LEI) или"
+" другой общий идентификатор."
 
 #: ../../standard/modelling/identifiers.rst:20
 #: a777c8001def4bf58839ba30d3a89629
@@ -327,7 +329,7 @@ msgstr ""
 "Или же, как вариант, если известное физическое лицо всегда представлено в "
 "системе лишь одним элементом, тогда в качестве значения параметра "
 "``recordId`` может выступать внутренний идентификатор физического лица. См. "
-"раздел :ref:`Идентификаторы элементов`."
+"раздел :ref:`record-identifiers`."
 
 #: ../../standard/modelling/identifiers.rst:77
 #: 7fb83b3012d84c2ea0aaa6579b998f74
