--- a/docs/locale/ru/LC_MESSAGES/standard/modelling/information-updates.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/modelling/information-updates.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Kateryna Volobuieva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Kateryna Volobuieva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +61,7 @@ msgstr ""
 "При изменении или подтверждении сведений об элементе (субъекте, физическом "
 "лице или отношениях) сети бенефициарного владения предмета ДОЛЖНА быть "
 "создана новая запись СДБВ. Дополнительные требования приводятся в разделе "
-":ref:`Создание записей`."
+":ref:`generating-statements`."
 
 #: ../../standard/modelling/information-updates.rst:13
 #: 9f424dee98a74441b1b66cb0cbb99b38
@@ -143,9 +144,9 @@ msgid ""
 msgstr ""
 "Когда Запись об элементе сети бенефициарного владения публикуется впервые, "
 "параметр ``recordStatus`` ДОЛЖЕН иметь значение 'new'. При изменении или "
-"подтверждении сведений об элементе параметр ``recordStatus` в новой Записи "
+"подтверждении сведений об элементе параметр ``recordStatus`` в новой Записи "
 "ДОЛЖЕН иметь значение 'updated'. Если элемент больше не входит в сеть "
-"бенефициарного владения, параметр ``recordStatus` в новой Записи ДОЛЖЕН "
+"бенефициарного владения, параметр ``recordStatus`` в новой Записи ДОЛЖЕН "
 "иметь значение 'closed'."
 
 #: ../../standard/modelling/information-updates.rst:31
@@ -222,7 +223,7 @@ msgstr ""
 #: ../../standard/modelling/information-updates.rst:48
 #: e45158bb9bc64c938e4beaf762acf4bf
 msgid "See the example in :any:`guidance-dates`."
-msgstr "См. пример в разделе :any:`Руководство по указанию дат`."
+msgstr "См. пример в разделе :any:`guidance-dates`."
 
 #: ../../standard/modelling/information-updates.rst:52
 #: db3d0f1ec1a34b8f8133998b140f5369
