--- a/docs/locale/ru/LC_MESSAGES/standard/modelling/repr-nominations.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/modelling/repr-nominations.po
@@ -7,6 +7,7 @@
 # Galia Williams, 2024
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Kateryna Volobuieva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Kateryna Volobuieva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -140,7 +141,7 @@ msgid ""
 "ownership."
 msgstr ""
 "Рекомендации по отображению косвенного бенефициарного владения см. в разделе"
-" :ref:`Отображение бенефициарных владельцев`."
+" :ref:`representing-bo`."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: dbea8b48a2a341b7b50f53dae1bf09f3
