--- a/docs/locale/ru/LC_MESSAGES/standard/modelling/repr-trusts.po
+++ b/docs/locale/ru/LC_MESSAGES/standard/modelling/repr-trusts.po
@@ -6,6 +6,7 @@
 # Translators:
 # Galia Williams, 2024
 # Kateryna Volobuieva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Kateryna Volobuieva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Russian (https://app.transifex.com/OpenDataServices/teams/95583/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -298,7 +299,7 @@ msgid ""
 "ownership."
 msgstr ""
 "Рекомендации по отображению косвенного бенефициарного владения см. в разделе"
-" :ref:`Отображение бенефициарных владельцев`."
+" :ref:`representing-bo`."
 
 #: ../../standard/modelling/repr-trusts.rst-1 5f6be83059774092af67b32c569080ef
 msgid ""
